# bfsi-reputation-intelligence

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: streamlit_app.py
bri_engine/: pyproject.toml
bri_engine/src/bri_engine/: __init__.py  pipeline.py  settings.py
bri_engine/src/bri_engine/core/: __init__.py  cleaning.py  llm_classifier.py  relevance.py  rule_classifier.py  schemas.py  sources.py  theme_extraction.py
config/: source_mapping.yml  taxonomy.yml
data/processed/: classified_mentions.csv  classified_mentions.parquet  classified_mentions.xlsx  pipeline_summary.json
docs/: DESIGN.md  development.md  methodology.md  scalability_approach.md
tests/: test_rule_classifier.py
